--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ h1 {
 
 .holeContainer1, .holeContainer3 {
   display: flex;
-  justify-content: end;
+  flex-direction: row-reverse;
 }
 
 .hole {
